Prevent page from displying in top safe area on mobile

--- a/docs/styles/style-prod.css
+++ b/docs/styles/style-prod.css
@@ -17,29 +17,14 @@
   --p6: #a2a2a2;
 }
 
-html {
-  background-color: var(--bg-dark);
-}
-
 body {
-  margin: 0;
   font-family: 'Outfit', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  background-color: transparent;
+  background-color: var(--bg-dark);
+  background-image: radial-gradient(circle at 50% 25%, var(--bg-highlight) 0%, var(--bg-dark) 100%);
+  background-attachment: fixed;
   color: var(--text);
   padding: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-body::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  pointer-events: none;
-  background-image: radial-gradient(circle at 50% 25%, var(--bg-highlight) 0%, var(--bg-dark) 100%);
 }
